# Radiation-Heat-Transfer-Modeling

./: CMakeLists.txt  README.md  conduction_solver.cpp  conduction_solver.h  geometry_loader.cpp  geometry_loader.h  imgui.ini  makefile  menu.cpp  menu.h  radiation_solver.cpp  radiation_solver.h  spectral_solver.cpp  spectral_solver.h  surface_properties.cpp  surface_properties.h  visualizer.cpp  visualizer.h
modules/: conduction_solver.ixx  geometry_loader.ixx  menu.ixx  radiation_solver.ixx  spectral_constants.ixx  spectral_solver.ixx  surface_properties.ixx  visualizer.ixx
resources/: imgui.ini
src/: conduction_solver.cpp  geometry_loader.cpp  menu.cpp  radiation_solver.cpp  spectral_solver.cpp  surface_properties.cpp  visualizer.cpp
